# sean_gpt

./: .env  .gitignore  .pylintrc  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.local.api  Dockerfile.migrate  Dockerfile.static_init  Dockerfile.test.api  README.md  alembic.ini  helmfile.yaml  package-lock.json  pyproject.toml  refresh_kube_env.sh  set_github_secrets.py  set_github_secrets.sh  set_github_secrets_and_env.sh  test.py
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: check-api.yaml  check-version.yaml  check_version.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy.yaml  development-build.yaml  development-prep.yaml  lint-backend.yaml  lint_backend.yaml  publish-release.yaml  release-create.yaml  release-prep.yaml  release-publish.yaml  run_lint.yaml  run_tests.yaml  tag_version.yaml  test-backend.yaml  test_backend.yaml  test_release_trigger.yaml  version-check.yaml  version-tag.yaml  version.yaml  version_check.yaml  version_tag.yaml
backend_server/: Dockerfile  fastapi-deployment.yaml
config/: values.yaml
config/development/: values.yaml
config/local/: test_secrets.yaml  values.yaml
config/production/: values.yaml
config/test/: values.yaml
db/: Containerfile  entrypoint.sh
db_server/: Dockerfile  mongodb-deployment.yaml
db_server/data_export/: dev_user_export.json
deploy/sean_gpt_backend/: sean_gpt-0.1.0-py3-none-any.whl
deploy/stable/: Dockerfile  backend-set.yaml  postgres.yaml  redis.yaml
deployment/scripts/: local_reset_postgres.sh  local_reset_redis.sh
deployment/sean_gpt_backend/: build_backend_local.sh
migrations/: README.md  env.py  migrate_job.yaml
scripts/: deploy_dev.sh  deploy_local.sh  find_latest_whl.py  get_latest_whl.py  get_version.py  kind-config.yaml  molten_salt_scrape.py  prepare_local.sh  prepare_prod.sh  prepare_test.sh  reset_local.sh  sync_gh_secrets.sh
sean_gpt/: ai.py  auth_util.py  auth_utils.py  config.py  constants.py  database.py  main.py  settings.py  sms.py
sean_gpt-chart/: Chart.yaml  values.yaml
sean_gpt/model/: access_token.py  (+8 more)
sean_gpt_backend/: Dockerfile  backend-set.yaml  build_backend_remote.sh  fastapi-service.yaml  fastapi.yaml  requirements.txt  sean_gpt-0.1.0-py3-none-any.whl
sean_gpt_chart/: Chart.yaml  local_secrets.yaml  test_secrets.yaml  values.yaml
sean_gpt_db/: mongodb-deployment.yaml  postgres-set.yaml  reset_db.sh
sean_gpt_frontend/: package-lock.json  package.json  tailwind.config.js
sean_gpt_redis/: redis-set.yaml
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
tests/: conftest.py  fixtures.py  test_auth.py  util.py
values/: local.yaml
(+185 files in other folders)
