[tool.poetry]
name = "sean-gpt"
version = "0.1.47"
description = ""
authors = ["Sean F <fitzgerald.sean.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"
openai = "^1.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
twilio = "^8.11.0"
httpx = "^0.26.0"
pytest = "^7.4.3"
greenlet = "^3.0.3"
httpx-sse = "^0.4.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
pylint = "^3.0.3"
toml = "^0.10.2"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
sse-starlette = "^1.8.2"
websockets = "^12.0"
alembic = "^1.13.1"
pymilvus = "^2.3.5"
minio = "^7.2.3"
kubernetes = "^29.0.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
